SEO optimization: Fix canonical URLs, add structured data, update sitemap and robots.txt

--- a/404.html
+++ b/404.html
@@ -9,8 +9,8 @@
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="Page Not Found | Bloom'n Events Co">
     <meta property="og:description" content="Sorry, the page you're looking for doesn't exist. Explore our event planning services, displays, and corporate events.">
-    <meta property="og:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
-    <meta property="og:url" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/404.html">
+    <meta property="og:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <meta property="og:url" content="https://www.bloomneventsco.com.au/404.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Bloom'n Events Co">
     <meta property="og:locale" content="en_AU">
@@ -19,7 +19,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Page Not Found | Bloom'n Events Co">
     <meta name="twitter:description" content="Sorry, the page you're looking for doesn't exist. Explore our event planning services and return to Bloom'n Events Co.">
-    <meta name="twitter:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
+    <meta name="twitter:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <link rel="canonical" href="https://www.bloomneventsco.com.au/404.html">
     
     <!-- Performance Optimization: Resource Hints -->
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
