--- a/displays.html
+++ b/displays.html
@@ -9,8 +9,8 @@
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="Displays | Bloom'n Events Co">
     <meta property="og:description" content="Custom displays & installations in Perth. Professional event decorations, artistic arrangements, and creative displays that transform spaces. Hire or buy options available.">
-    <meta property="og:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
-    <meta property="og:url" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/displays.html">
+    <meta property="og:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <meta property="og:url" content="https://www.bloomneventsco.com.au/displays.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Bloom'n Events Co">
     <meta property="og:locale" content="en_AU">
@@ -19,7 +19,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Displays | Bloom'n Events Co">
     <meta name="twitter:description" content="Custom displays & installations in Perth. Professional event decorations, artistic arrangements, and creative displays that transform spaces.">
-    <meta name="twitter:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
+    <meta name="twitter:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <link rel="canonical" href="https://www.bloomneventsco.com.au/displays.html">
     
     <!-- Performance Optimization: Resource Hints -->
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
@@ -74,6 +75,26 @@
         });
         observer.observe({ entryTypes: ['largest-contentful-paint'] });
       }
+    </script>
+    
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Service",
+        "serviceType": "Custom Displays & Installations",
+        "provider": {
+            "@type": "Organization",
+            "name": "Bloom'n Events Co Pty Ltd",
+            "url": "https://www.bloomneventsco.com.au/",
+            "logo": "https://www.bloomneventsco.com.au/images/logo-wht.png"
+        },
+        "areaServed": {
+            "@type": "State",
+            "name": "Western Australia"
+        },
+        "description": "Custom displays and installations for events and businesses. Professional event decorations, artistic arrangements, and creative displays that transform spaces."
+    }
     </script>
 </head>
 
