--- a/gallery.html
+++ b/gallery.html
@@ -9,8 +9,8 @@
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="Gallery | Bloom'n Events Co">
     <meta property="og:description" content="View our event portfolio: corporate events, creative workshops, displays, and more. See examples of Bloom'n Events Co's work across Perth and Western Australia.">
-    <meta property="og:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
-    <meta property="og:url" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/gallery.html">
+    <meta property="og:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <meta property="og:url" content="https://www.bloomneventsco.com.au/gallery.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Bloom'n Events Co">
     <meta property="og:locale" content="en_AU">
@@ -19,7 +19,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Gallery | Bloom'n Events Co">
     <meta name="twitter:description" content="View our event portfolio: corporate events, creative workshops, displays, and more. See examples of Bloom'n Events Co's work.">
-    <meta name="twitter:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
+    <meta name="twitter:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <link rel="canonical" href="https://www.bloomneventsco.com.au/gallery.html">
     <meta name="webp-assets" content="true">
     
     <!-- Performance Optimization: Resource Hints -->
