--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Bloom'n Events Co Pty Ltd">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="googlebot" content="index, follow">
-    <link rel="canonical" href="https://antondelange.github.io/Bloom-n-Events-Co-Website/">
+    <link rel="canonical" href="https://www.bloomneventsco.com.au/">
     
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="Bloom'n Events Co | Professional Event Planning & Displays">
     <meta property="og:description" content="Professional event planning & displays in Brookton, WA. Corporate events, workshops, custom displays. Transform your vision into unforgettable experiences with Bloom'n Events Co.">
-    <meta property="og:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
-    <meta property="og:url" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/">
+    <meta property="og:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <meta property="og:url" content="https://www.bloomneventsco.com.au/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Bloom'n Events Co">
     <meta property="og:locale" content="en_AU">
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Bloom'n Events Co | Professional Event Planning & Displays">
     <meta name="twitter:description" content="Professional event planning & displays in Brookton, WA. Corporate events, workshops, custom displays. Transform your vision into unforgettable experiences.">
-    <meta name="twitter:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
+    <meta name="twitter:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
     <meta name="twitter:site" content="@bloomneventsco">
     <meta name="twitter:creator" content="@bloomneventsco">
     
@@ -91,8 +91,8 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Bloom'n Events Co Pty Ltd",
-        "url": "https://antondelange.github.io/Bloom-n-Events-Co-Website/",
-        "logo": "https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png",
+        "url": "https://www.bloomneventsco.com.au/",
+        "logo": "https://www.bloomneventsco.com.au/images/logo-wht.png",
         "description": "Professional event planning & displays in Brookton, WA. Corporate events, workshops, custom displays.",
         "address": {
             "@type": "PostalAddress",
