--- a/capabilities.html
+++ b/capabilities.html
@@ -9,8 +9,8 @@
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="Our Capabilities | Bloom'n Events Co">
     <meta property="og:description" content="Full-service event capabilities: engineering, design, fabrication, signage, installation. In-house production from concept to completion. Traditional artistry meets modern technology.">
-    <meta property="og:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
-    <meta property="og:url" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/capabilities.html">
+    <meta property="og:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <meta property="og:url" content="https://www.bloomneventsco.com.au/capabilities.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Bloom'n Events Co">
     <meta property="og:locale" content="en_AU">
@@ -19,7 +19,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Our Capabilities | Bloom'n Events Co">
     <meta name="twitter:description" content="Full-service event capabilities: engineering, design, fabrication, signage, installation. In-house production from concept to completion.">
-    <meta name="twitter:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
+    <meta name="twitter:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
+    <link rel="canonical" href="https://www.bloomneventsco.com.au/capabilities.html">
     
     <!-- Performance Optimization: Resource Hints -->
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
