Service page architecture: Enhance local SEO, structured data, internal linking, and conversion paths

--- a/capabilities.html
+++ b/capabilities.html
@@ -173,6 +173,45 @@
                         <p class="lead mb-4">With decades of experience across industries—from submarines to shopping centres—we are adaptable, fast-thinking, and deeply professional under pressure. We thrive in complex environments, can scale solutions for any size event, and always maintain a strong, calm presence on site.</p>
                         
                         <p class="lead"><b>In short: We don't just show up with a van full of props. We show up with tools, talent, vision, and over 120 years of combined mastery. We're artists, engineers, storytellers, and builders—here to create moments your audience will never forget.</b></p>
+                        
+                        <div class="text-center mt-5">
+                            <h2 class="text-gold heading-blush-bg content-heading-large mb-4">Explore Our Services</h2>
+                            <p class="lead text-charcoal mb-4">
+                                Our unique capabilities power everything we do. Discover how we apply this expertise across our services:
+                            </p>
+                            <div class="row g-3">
+                                <div class="col-md-4">
+                                    <div class="card h-100">
+                                        <div class="card-body text-center">
+                                            <h4 class="text-gold">Corporate Events</h4>
+                                            <p class="text-charcoal">Professional event planning and management for businesses across Perth and Western Australia.</p>
+                                            <a href="events.html" class="btn btn-gold btn-sm">Learn More</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card h-100">
+                                        <div class="card-body text-center">
+                                            <h4 class="text-gold">Creative Workshops</h4>
+                                            <p class="text-charcoal">Hands-on learning experiences for kids and adults, from school holidays to team building.</p>
+                                            <a href="workshops.html" class="btn btn-gold btn-sm">Learn More</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="card h-100">
+                                        <div class="card-body text-center">
+                                            <h4 class="text-gold">Custom Displays</h4>
+                                            <p class="text-charcoal">Unique installations and displays that transform spaces and captivate audiences.</p>
+                                            <a href="displays.html" class="btn btn-gold btn-sm">Learn More</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mt-4">
+                                <a href="contact.html" class="btn btn-gold">Discuss Your Project</a>
+                            </div>
+                        </div>
                 </div>
             </div>
         </div>
