--- a/events.html
+++ b/events.html
@@ -83,16 +83,36 @@
         "@context": "https://schema.org",
         "@type": "Service",
         "serviceType": "Corporate Event Planning",
+        "name": "Corporate Event Planning Services",
+        "description": "Professional corporate event planning and management in Perth and Western Australia. From networking events to product launches, we deliver memorable business experiences.",
         "provider": {
-            "@type": "Organization",
+            "@type": "LocalBusiness",
             "name": "Bloom'n Events Co Pty Ltd",
             "url": "https://www.bloomneventsco.com.au/",
-            "logo": "https://www.bloomneventsco.com.au/images/logo-wht.png"
+            "logo": "https://www.bloomneventsco.com.au/images/logo-wht.png",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Brookton",
+                "addressRegion": "WA",
+                "addressCountry": "AU"
+            },
+            "areaServed": {
+                "@type": "State",
+                "name": "Western Australia"
+            },
+            "telephone": "1800 826 268",
+            "email": "enquiries@bloomneventsco.com.au"
         },
-        "areaServed": {
-            "@type": "State",
-            "name": "Western Australia"
-        },
+        "areaServed": [
+            {
+                "@type": "City",
+                "name": "Perth"
+            },
+            {
+                "@type": "State",
+                "name": "Western Australia"
+            }
+        ],
         "hasOfferCatalog": {
             "@type": "OfferCatalog",
             "name": "Corporate Event Services",
@@ -188,10 +208,13 @@
                     <div class="col-lg-6 order-lg-1 order-2 mb-4">
                             <div class="content-section">
                             <p class="lead">
-                                    <b>Bloom'n Events Co.</b> delivers immersive corporate experiences designed to connect, elevate, and inspire. From single-day activations to multiday retreats, our events span networking, professional development, leadership, and brand engagement—ideal for today's dynamic business landscape.
+                                    <b>Bloom'n Events Co.</b> delivers immersive corporate experiences designed to connect, elevate, and inspire. From single-day activations to multiday retreats, our events span networking, professional development, leadership, and brand engagement—ideal for today's dynamic business landscape across Perth and Western Australia.
                             </p>
                             <p>
-                                We design thoughtfully curated environments that empower professionals to connect, collaborate, learn, and thrive together. From dynamic B2B showcases and immersive executive training sessions to bespoke branded activations, every event is carefully tailored to reflect your team’s unique culture, core message, and strategic objectives. Our approach ensures meaningful engagement, fosters valuable relationships, and delivers impactful experiences that resonate long after the event concludes.
+                                We design thoughtfully curated environments that empower professionals to connect, collaborate, learn, and thrive together. From dynamic B2B showcases and immersive executive training sessions to bespoke branded activations, every event is carefully tailored to reflect your team's unique culture, core message, and strategic objectives. Our approach ensures meaningful engagement, fosters valuable relationships, and delivers impactful experiences that resonate long after the event concludes.
+                            </p>
+                            <p class="text-charcoal">
+                                Based in Brookton, WA, we serve businesses throughout Perth and regional Western Australia, bringing decades of combined expertise in event planning, design, and technical execution to every project.
                             </p>
                         </div>
                     </div>
@@ -258,9 +281,45 @@
                         
                         <div class="text-center mt-5">
                             <p class="text-charcoal">
-                                <b>Bloom'n Events Co.</b> is committed to delivering exceptional corporate experiences that foster connection, creativity, and collaboration.
+                                <b>Bloom'n Events Co.</b> is committed to delivering exceptional corporate experiences that foster connection, creativity, and collaboration. We've successfully delivered events for clients including <a href="gallery.html" class="text-gold">Hawaiian Shopping Centres</a>, <a href="gallery.html" class="text-gold">Centuria Capital</a>, and other leading Perth businesses.
                             </p>
-                            <a href="contact.html" class="btn btn-gold">Plan Your Event</a>
+                            <div class="mt-4">
+                                <a href="contact.html" class="btn btn-gold me-3">Get a Free Consultation</a>
+                                <a href="gallery.html" class="btn btn-outline-gold">View Our Work</a>
+                            </div>
+                        </div>
+                        
+                        <!-- Trust Signals Section -->
+                        <div class="row mt-5">
+                            <div class="col-12">
+                                <h2 class="text-gold heading-blush-bg content-heading-large text-center mb-4">Why Choose Bloom'n Events Co?</h2>
+                                <div class="row g-4">
+                                    <div class="col-md-6 col-lg-3">
+                                        <div class="text-center">
+                                            <h4 class="text-gold">40+ Years</h4>
+                                            <p class="text-charcoal small">Combined expertise in engineering, design, and event management</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-3">
+                                        <div class="text-center">
+                                            <h4 class="text-gold">Full Service</h4>
+                                            <p class="text-charcoal small">From concept to completion—all handled in-house</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-3">
+                                        <div class="text-center">
+                                            <h4 class="text-gold">Perth & WA</h4>
+                                            <p class="text-charcoal small">Serving businesses across Western Australia</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 col-lg-3">
+                                        <div class="text-center">
+                                            <h4 class="text-gold">Proven Results</h4>
+                                            <p class="text-charcoal small">Trusted by leading Perth businesses and shopping centres</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
