--- a/index.html
+++ b/index.html
@@ -427,6 +427,46 @@
             </div>
         </section>
 
+        <!-- SERVICES OVERVIEW -->
+        <section class="section-main" aria-labelledby="servicesHeading">
+            <div class="container">
+                <h2 id="servicesHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Our Services</h2>
+                <div class="row g-4">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card h-100 shadow">
+                            <div class="card-body">
+                                <h3 class="text-gold mb-3">Corporate Events</h3>
+                                <p class="text-charcoal">Professional event planning and management for businesses across Perth and Western Australia. From networking events to product launches, we create memorable corporate experiences.</p>
+                                <a href="events.html" class="btn btn-gold btn-sm">Explore Corporate Events</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card h-100 shadow">
+                            <div class="card-body">
+                                <h3 class="text-gold mb-3">Creative Workshops</h3>
+                                <p class="text-charcoal">Hands-on learning experiences for kids and adults. Perfect for school holidays, team building, and community events throughout Perth and regional WA.</p>
+                                <a href="workshops.html" class="btn btn-gold btn-sm">Explore Workshops</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card h-100 shadow">
+                            <div class="card-body">
+                                <h3 class="text-gold mb-3">Custom Displays</h3>
+                                <p class="text-charcoal">Unique installations and displays that transform spaces. From seasonal decorations to permanent installations, we create captivating visual experiences.</p>
+                                <a href="displays.html" class="btn btn-gold btn-sm">Explore Displays</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center mt-5">
+                    <p class="lead text-charcoal mb-3">Learn more about our <a href="capabilities.html" class="text-gold">unique capabilities</a> that set us apart.</p>
+                    <a href="contact.html" class="btn btn-gold">Get Started</a>
+                </div>
+            </div>
+        </section>
+
         <!-- TESTIMONIALS -->
         <section class="testimonials section-main" aria-labelledby="testimonialsHeading">
             <div class="container">
