--- a/displays.html
+++ b/displays.html
@@ -83,16 +83,36 @@
         "@context": "https://schema.org",
         "@type": "Service",
         "serviceType": "Custom Displays & Installations",
+        "name": "Custom Display & Installation Services",
+        "description": "Custom displays and installations for events and businesses in Perth and Western Australia. Professional event decorations, artistic arrangements, and creative displays that transform spaces.",
         "provider": {
-            "@type": "Organization",
+            "@type": "LocalBusiness",
             "name": "Bloom'n Events Co Pty Ltd",
             "url": "https://www.bloomneventsco.com.au/",
-            "logo": "https://www.bloomneventsco.com.au/images/logo-wht.png"
+            "logo": "https://www.bloomneventsco.com.au/images/logo-wht.png",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Brookton",
+                "addressRegion": "WA",
+                "addressCountry": "AU"
+            },
+            "areaServed": {
+                "@type": "State",
+                "name": "Western Australia"
+            },
+            "telephone": "1800 826 268",
+            "email": "enquiries@bloomneventsco.com.au"
         },
-        "areaServed": {
-            "@type": "State",
-            "name": "Western Australia"
-        },
+        "areaServed": [
+            {
+                "@type": "City",
+                "name": "Perth"
+            },
+            {
+                "@type": "State",
+                "name": "Western Australia"
+            }
+        ],
         "description": "Custom displays and installations for events and businesses. Professional event decorations, artistic arrangements, and creative displays that transform spaces."
     }
     </script>
@@ -175,20 +195,26 @@
                         <div class="col-lg-6">
 
                             <p class="lead">
-                                At <b>Bloom'n Creative Design Co.</b> we pride ourselves on offering unique and custom-designed displays that leave a lasting impression.
+                                At <b>Bloom'n Creative Design Co.</b> we pride ourselves on offering unique and custom-designed displays that leave a lasting impression. Based in Brookton, WA, we serve businesses and venues across Perth and Western Australia.
                             </p>
                             <p class="text-charcoal">
-                                Specialising in large, lifelike installations, we bring creative flair and visual impact to corporate and public events, celebrations, international days, seasonal holidays, and product or venue launches.
+                                Specialising in large, lifelike installations, we bring creative flair and visual impact to corporate and public events, celebrations, international days, seasonal holidays, and product or venue launches throughout Perth and regional Western Australia.
                             </p>
                             <p class="text-charcoal">
-                                Each installation is thoughtfully crafted to reflect your brand identity or event theme, combining artistic innovation with meticulous attention to detail to deliver a truly memorable experience for your audience.
+                                Each installation is thoughtfully crafted to reflect your brand identity or event theme, combining artistic innovation with meticulous attention to detail to deliver a truly memorable experience for your audience. We've created displays for <a href="gallery.html" class="text-gold">Centuria Capital</a>, <a href="gallery.html" class="text-gold">Hawaiian Shopping Centres</a>, and other leading Perth businesses.
                             </p>
 
 
                         </div>
                     </div>
                     <div class="text-center mt-4">
-                        <a href="contact.html" class="btn btn-gold">Design Your Display</a>
+                        <p class="text-charcoal mb-3">
+                            Whether you need a seasonal display for your Perth business, a custom installation for a special event, or a permanent display for your venue, we create solutions that captivate and inspire.
+                        </p>
+                        <div>
+                            <a href="contact.html" class="btn btn-gold me-3">Get a Free Consultation</a>
+                            <a href="gallery.html" class="btn btn-outline-gold">View Our Display Portfolio</a>
+                        </div>
                     </div>
                 </div>
                 
