Add case study architecture: Create 3 case study pages with structured data, strategic internal linking, and SEO optimization

--- a/events.html
+++ b/events.html
@@ -289,6 +289,33 @@
                             </div>
                         </div>
                         
+                        <!-- Case Studies Section -->
+                        <div class="row mt-5">
+                            <div class="col-12">
+                                <h2 class="text-gold heading-blush-bg content-heading-large text-center mb-4">Featured Case Studies</h2>
+                                <div class="row g-4">
+                                    <div class="col-md-6">
+                                        <div class="card h-100">
+                                            <div class="card-body">
+                                                <h4 class="text-gold mb-3">Centuria Connect140 Networking Event</h4>
+                                                <p class="text-charcoal">How we created meaningful connections for Perth business community through intentional event design and atmospheric styling.</p>
+                                                <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="card h-100">
+                                            <div class="card-body">
+                                                <h4 class="text-gold mb-3">Hawaiian Forrestfield Food Festival</h4>
+                                                <p class="text-charcoal">One-day food festival event that celebrated tenant opening while showcasing food diversity and driving community engagement.</p>
+                                                <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
                         <!-- Trust Signals Section -->
                         <div class="row mt-5">
                             <div class="col-12">
