--- a/workshops.html
+++ b/workshops.html
@@ -340,6 +340,28 @@
                     </div>
                 </div>
                 
+                <!-- Case Study Section -->
+                <div class="workshop-section mt-5">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2 class="text-gold heading-blush-bg content-heading-large text-center mb-4">Featured Case Study</h2>
+                            <div class="row">
+                                <div class="col-lg-8 mx-auto">
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h4 class="text-gold mb-3">Hawaiian Neighbourhood Nibbles School Holiday Programme</h4>
+                                            <p class="text-charcoal">
+                                                How we delivered a food-based July school holiday activity across seven Hawaiian shopping centres, driving traffic uplifts and encouraging dwell among families. The programme successfully engaged Hawaiian's most valuable market segment while maintaining consistent quality across multiple locations.
+                                            </p>
+                                            <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Full Case Study</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <!-- Conversion Section -->
                 <div class="workshop-section mt-5">
                     <div class="row">
