--- a/index.html
+++ b/index.html
@@ -524,6 +524,9 @@
                         <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="2" aria-label="Testimonial 3"></button>
                     </div>
                 </div>
+                <div class="text-center mt-4">
+                    <p class="text-charcoal">See detailed case studies: <a href="case-study-centuria-connect140.html" class="text-gold">Centuria Connect140</a>, <a href="case-study-hawaiian-forrestfield.html" class="text-gold">Hawaiian Forrestfield</a>, <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="text-gold">Hawaiian Neighbourhood Nibbles</a></p>
+                </div>
             </div>
         </section>
 
